--- a/Exercise - 8/style.css
+++ b/Exercise - 8/style.css
@@ -13,14 +13,17 @@ h1{
     font-style:italic;
     color: black;
     font-weight: bold;
+    
 }
 li[draggable = "true"]{
     color: rgb(0, 151, 0);
     font-style: oblique;
+
 }
 li[draggable= "false" ]{
     color: rgb(255, 0, 0);
     font-style: oblique;
+    
 }
 li{
     color:rgb(126, 185, 224);
@@ -28,6 +31,18 @@ li{
 *{
     color: green;
 }
+
+
+
+    .content {
+        display: flex;
+        flex-direction: column; /* Stack items vertically */
+        align-items: center; /* Align items horizontally */
+   
+      }
+      
+
+
 
 
  
