--- a/Exercise - 11/style.css
+++ b/Exercise - 11/style.css
@@ -2,15 +2,16 @@
 .layout-one > p {
     display: block; /*default*/
     width: 200px;
-    height: 100%;
+    height: 130px;
     background-color: rebeccapurple;
     text-align: center;
+    align-content: center;
 }
 
 .layout-two > p {
     display: inline; /*default*/
     width: 200px; /*can't impact on the size that mode*/
-    height: 100%;/*can't impact on the size that mode*/
+    height: 200px;/*can't impact on the size that mode*/
     background-color: yellowgreen;
     text-align: center;
 }
@@ -18,7 +19,8 @@
 .layout-three > p {
     display: inline-block; /*default*/
     width: 200px;
-    height: 100%;
+    height: 100px;
     background-color: aqua;
     text-align: center;
+    align-content: center;
 }
