Exercise 11 Display mode

--- a/Exercise - 11/style.css
+++ b/Exercise - 11/style.css
@@ -22,7 +22,7 @@
     display: inline-block; /*default*/
     width: 200px;
     height: 100px;
-    background-color: orangered;
+    background-color:burlywood;
     text-align: center;
     align-content: center;
     border-radius: 10%;
